feat(product-service): 1:1 재고 전환 + pending 제거
- entity: Product.stock(OneToOne)로 변경, Stock.product에 OneToOne(unique FK) 적용
- factory: 상품 생성 시 Stock 함께 생성 후 assignStock 사용
- repository(qdsl): findByIdWithStocks → findByIdWithStock로 변경 (join product.stock fetch join)
- service: OrderServiceClient/PendingQuantityInternal 제거
- service: 가용재고 계산을 (stockQuantity - reserved)로 통일
  - getProducts: stockRepository.findByProductIds(ids) 1회 호출 후 availableMap으로 DTO 매핑
  - getProductDetail/getAvailableQuantities: qty-reserved 사용, getStocks().get(0) 제거
- exception: ProductAlreadyHasStockException 추가 및 409 매핑 핸들러 등록
- pending 기반 Feign/로직 전부 삭제